the gap that is between images fixed

--- a/client/public/main.css
+++ b/client/public/main.css
@@ -189,8 +189,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 50px;
-  padding-bottom: 100px;
+  gap: 70px;
 }
 .posts-box .box .left {
   flex: 2;
@@ -220,6 +219,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+.posts-box .box .right img {
+  width: 100%;
+  max-height: 400px;
+  height: 100%;
+  object-fit: cover;
 }
 .posts-box .box a {
   width: 140px;
